# open-desktop-gpt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  requirements.txt
.github/workflows/: release.yml
.knowledge-gpt/: compile_log.jsonl  config.yaml
app/: README.md  fix_a11y.cjs  fix_a11y.js  package.json  pnpm-lock.yaml
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: agents.rs  compile.rs  config.rs  conversations.rs  export.rs  ingest.rs  lib.rs  search.rs  sources.rs  tiers.rs  watcher.rs  wiki.rs
app/src-tauri/src/llm/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
app/src/components/: CommandPalette.tsx  CompilePreview.tsx  EmptyState.tsx  IngestDialog.tsx  Layout.tsx  SettingsDialog.tsx  SetupWizard.tsx  Sidebar.tsx  SidebarBrowseTab.tsx  SidebarInboxTab.tsx  SidebarSearchTab.tsx  Toast.tsx  UncompiledList.tsx
app/src/components/ui/: dialog.tsx  label.tsx
app/src/hooks/: useFileWatcher.ts  useTauriCommand.ts  useTheme.ts  useToast.ts
app/src/lib/: config-types.ts  motion.ts  types.ts
app/src/pages/: Dashboard.tsx  Graph.tsx  Inbox.tsx  QA.tsx  Reader.tsx
docs/: GUIDE.md
docs/superpowers/plans/: 2026-04-04-desktop-app.md
docs/superpowers/specs/: 2026-04-04-desktop-app-design.md
tools/: export.py  ingest.py  search.py  stats.py
wiki/: _categories.md  _concepts.md  _index.md  _recent.md
